force-app/main/default/objects/ABCD__c/ABCD__c.object-meta.xml
<CustomObject>
    <label>ABCD</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aaaatestt</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>