force-app/main/default/objects/ABCD__c/fields/abc__c.field-meta.xml
<CustomField>
    <fullName>abc__c</fullName>
    <label>abc</label>
    <length>52</length>
    <type>Text</type>
</CustomField>