force-app/main/default/objects/ABCD__c/fields/Carname__c.field-meta.xml
<CustomField>
    <fullName>Carname__c</fullName>
    <label>Carname</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>aaaatestt</relationshipLabel>
    <relationshipName>aaaatestt</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>