force-app/main/default/objects/ABCD__c/fields/xyz__c.field-meta.xml
<CustomField>
    <fullName>xyz__c</fullName>
    <label>xyz</label>
    <length>52</length>
    <type>Text</type>
</CustomField>